--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,4 +1,3 @@
-.total, .bankAmount {
-  font-size: 25px;
-  font-family:'Times New Roman', Times, serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
